--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -19,7 +19,7 @@ modId="mekanismneutronactivator" #mandatory
 # The version number of the mod - there's a few well known ${} variables useable here or just hardcode it
 # ${file.jarVersion} will substitute the value of the Implementation-Version as read from the mod's JAR file metadata
 # see the associated build.gradle script for how to populate this completely automatically during a build
-version="1.1.2" #mandatory
+version="1.2.0" #mandatory
  # A display name for the mod
 displayName="Mekanism: Neutron Activator" #mandatory
 # A URL to query for updates for this mod. See the JSON update specification https://mcforge.readthedocs.io/en/latest/gettingstarted/autoupdate/
@@ -43,6 +43,8 @@ This weakness can lead to the shutdown of fusion reactors and leakage of radioac
 That is the reason why we developed a new method.
 This new method uses a fusion reaction as a neutron source.
 This method is weather and climate independent and can overcome the weaknesses of current methods.
+
+PS: We developed another method which uses nuclear waste. This is for the environments where the sun is unavailable.
 '''
 # A dependency - use the . to indicate dependency for a specific modid. Dependencies are optional.
 [[dependencies.mekanismneutronactivator]] #optional
