--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -1,38 +1,13 @@
-# This is an example mods.toml file. It contains the data relating to the loading mods.
-# There are several mandatory fields (#mandatory), and many more that are optional (#optional).
-# The overall format is standard TOML format, v0.5.0.
-# Note that there are a couple of TOML lists in this file.
-# Find more information on toml format here:  https://github.com/toml-lang/toml
-# The name of the mod loader type to load - for regular FML @Mod mods it should be javafml
-modLoader="javafml" #mandatory
-# A version range to match for said mod loader - for regular FML @Mod it will be the forge version
+modLoader="javafml"
 loaderVersion="[40,)" #mandatory This is typically bumped every Minecraft version by Forge. See our download page for lists of versions.
-# The license for you mod. This is mandatory metadata and allows for easier comprehension of your redistributive properties.
-# Review your options at https://choosealicense.com/. All rights reserved is the default copyright stance, and is thus the default here.
 license="MIT License"
-# A URL to refer people to when problems occur with this mod
-#issueTrackerURL="https://change.me.to.your.issue.tracker.example.invalid/" #optional
-# A list of mods - how many allowed here is determined by the individual mod loader
-[[mods]] #mandatory
-# The modid of the mod
-modId="mekanismneutronactivator" #mandatory
-# The version number of the mod - there's a few well known ${} variables useable here or just hardcode it
-# ${file.jarVersion} will substitute the value of the Implementation-Version as read from the mod's JAR file metadata
-# see the associated build.gradle script for how to populate this completely automatically during a build
-version="1.2.1" #mandatory
- # A display name for the mod
-displayName="Mekanism: Neutron Activator" #mandatory
-# A URL to query for updates for this mod. See the JSON update specification https://mcforge.readthedocs.io/en/latest/gettingstarted/autoupdate/
-#updateJSONURL="https://change.me.example.invalid/updates.json" #optional
-# A URL for the "homepage" for this mod, displayed in the mod UI
-#displayURL="https://change.me.to.your.mods.homepage.example.invalid/" #optional
-# A file name (in the root of the mod JAR) containing a logo for display
-logoFile="mekanismneutronactivator.png" #optional
-# A text field displayed in the mod UI
-credits="Thanks for this mod goes to original mod creators" #optional
-# A text field displayed in the mod UI
-authors="michanide" #optional
-# The description text for the mod (multi line!) (#mandatory)
+
+[[mods]]
+modId="mekanismneutronactivator"
+version="1.2.2"
+displayName="Mekanism: Neutron Activator"
+credits="Thanks for this mod goes to original mod creators"
+authors="michanide"
 description='''
 Mekanism has processing technology which uses neutron.
 This technology is necessary for processing radioactive waste and producing D-T fuel.
@@ -46,35 +21,31 @@ This method is weather and climate independent and can overcome the weaknesses o
 
 PS: We developed another method which uses nuclear waste. This is for the environments where the sun is unavailable.
 '''
-# A dependency - use the . to indicate dependency for a specific modid. Dependencies are optional.
-[[dependencies.mekanismneutronactivator]] #optional
-    # the modid of the dependency
-    modId="forge" #mandatory
-    # Does this dependency have to exist - if not, ordering below must be specified
-    mandatory=true #mandatory
-    # The version range of the dependency
-    versionRange="[40.2.0,)" #mandatory
-    # An ordering relationship for the dependency - BEFORE or AFTER required if the relationship is not mandatory
+
+[[dependencies.mekanismneutronactivator]]
+    modId="forge"
+    mandatory=true
+    versionRange="[40.2.0,)"
     ordering="NONE"
-    # Side this dependency is applied on - BOTH, CLIENT or SERVER
     side="BOTH"
-[[dependencies.mekanismneutronactivator]] #optional
+
+[[dependencies.mekanismneutronactivator]]
     modId="mekanism"
     mandatory=true
     versionRange="[10.2.5,)"
     ordering="AFTER"
     side="BOTH"
-[[dependencies.mekanismneutronactivator]] #optional
+
+[[dependencies.mekanismneutronactivator]]
     modId="mekanismgenerators"
     mandatory=true
     versionRange="[10.2.5,)"
     ordering="AFTER"
     side="BOTH"
-# Here's another dependency
+
 [[dependencies.mekanismneutronactivator]]
     modId="minecraft"
     mandatory=true
-# This version range declares a minimum of the current minecraft version up to but not including the next major version
     versionRange="[1.18.2,1.19)"
     ordering="NONE"
     side="BOTH"
