--- a/gradle.properties
+++ b/gradle.properties
@@ -6,54 +6,27 @@ org.gradle.daemon=false
 
 ## Environment Properties
 
-# The Minecraft version must agree with the Forge version to get a valid artifact
 minecraft_version=1.20.1
-# The Minecraft version range can use any release version of Minecraft as bounds.
-# Snapshots, pre-releases, and release candidates are not guaranteed to sort properly
-# as they do not follow standard versioning conventions.
-minecraft_version_range=[1.20.1,1.21)
-# The Forge version must agree with the Minecraft version to get a valid artifact
-forge_version=47.4.0
-# The Forge version range can use any version of Forge as bounds or match the loader version range
-forge_version_range=[47,)
-# The loader version range can only use the major version of Forge/FML as bounds
+minecraft_version_range=[1.20.1]
+forge_version=47.1.76
+forge_version_range=[47.1.1,)
 loader_version_range=[47,)
-# The mapping channel to use for mappings.
-# The default set of supported mapping channels are ["official", "snapshot", "snapshot_nodoc", "stable", "stable_nodoc"].
-# Additional mapping channels can be registered through the "channelProviders" extension in a Gradle plugin.
-#
-# | Channel   | Version              |                                                                                |
-# |-----------|----------------------|--------------------------------------------------------------------------------|
-# | official  | MCVersion            | Official field/method names from Mojang mapping files                          |
-# | parchment | YYYY.MM.DD-MCVersion | Open community-sourced parameter names and javadocs layered on top of official |
-#
-# You must be aware of the Mojang license when using the 'official' or 'parchment' mappings.
-# See more information here: https://github.com/MinecraftForge/MCPConfig/blob/master/Mojang.md
-#
-# Parchment is an unofficial project maintained by ParchmentMC, separate from Minecraft Forge.
-# Additional setup is needed to use their mappings, see https://parchmentmc.org/docs/getting-started
 mapping_channel=official
-# The mapping version to query from the mapping channel.
-# This must match the format required by the mapping channel.
 mapping_version=1.20.1
 
 
 ## Mod Properties
 
-# The unique mod identifier for the mod. Must be lowercase in English locale. Must fit the regex [a-z][a-z0-9_]{1,63}
-# Must match the String constant located in the main mod class annotated with @Mod.
-mod_id=examplemod
-# The human-readable display name for the mod.
-mod_name=Example Mod
-# The license of the mod. Review your options at https://choosealicense.com/. All Rights Reserved is the default.
-mod_license=All Rights Reserved
-# The mod version. See https://semver.org/
-mod_version=1.0.0
-# The group ID for the mod. It is only important when publishing as an artifact to a Maven repository.
-# This should match the base package used for the mod sources.
-# See https://maven.apache.org/guides/mini/guide-naming-conventions.html
-mod_group_id=com.example.examplemod
-# The authors of the mod. This is a simple text string that is used for display purposes in the mod list.
-mod_authors=YourNameHere, OtherNameHere
-# The description of the mod. This is a simple multiline text string that is used for display purposes in the mod list.
-mod_description=Example mod description.\nNewline characters can be used and will be replaced properly.
+mod_id=mekanismneutronactivator
+mod_name=Mekanism: Neutron Activator
+mod_license=MIT License
+mod_version=0.0.1
+mod_group_id=net.michanide.mekanismneutronactivator
+mod_authors=michanide
+mod_description=Mekanism has processing technology which uses neutron.\nThis technology is necessary for processing radioactive waste and producing D-T fuel.\nCurrently practical method uses neutron beams from the sun.\nThis method has the weakness of being weather and climate dependent.\nThis weakness can lead to the shutdown of fusion reactors and leakage of radioactive waste.\nThat is the reason why we developed a new method.\nThis new method uses a fusion reaction as a neutron source.\nThis method is weather and climate independent and can overcome the weaknesses of current methods.\n\nPS: We developed another method which uses nuclear waste. This is for the environments where the sun is unavailable.
+
+## Dependency Properties
+mekanism_version=10.4.15.75
+mekanism_version_range=[10.4.0,)
+jei_version=15.20.0.106
+jei_version_range=[15.2.0.20,)
