--- a/gradle.properties
+++ b/gradle.properties
@@ -20,7 +20,7 @@ mapping_version=1.20.1
 mod_id=mekanismneutronactivator
 mod_name=Mekanism: Neutron Activator
 mod_license=MIT License
-mod_version=1.0.0
+mod_version=1.20.1-1.0.0
 mod_group_id=net.michanide.mekanismneutronactivator
 mod_authors=michanide
 mod_description=Mekanism has processing technology which uses neutron.\nThis technology is necessary for processing radioactive waste and producing D-T fuel.\nCurrently practical method uses neutron beams from the sun.\nThis method has the weakness of being weather and climate dependent.\nThis weakness can lead to the shutdown of fusion reactors and leakage of radioactive waste.\nThat is the reason why we developed a new method.\nThis new method uses a fusion reaction as a neutron source.\nThis method is weather and climate independent and can overcome the weaknesses of current methods.\n\nPS: We developed another method which uses nuclear waste. This is for the environments where the sun is unavailable.
